upgrade helm charts for istio

--- a/examples/helm/details/templates/deployment.yaml
+++ b/examples/helm/details/templates/deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         {{- include "details.selectorLabels" . | nindent 8 }}
+        {{- include "details.istio.labels" . | nindent 8 }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
