--- a/examples/service-mesh/02-canary-percent/reviews/bookinfo-reviews-v2.yaml
+++ b/examples/service-mesh/02-canary-percent/reviews/bookinfo-reviews-v2.yaml
@@ -1,46 +1,25 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: reviews
-  labels:
-    app: reviews
-    service: reviews
-spec:
-  ports:
-  - port: 9080
-    name: http
-  selector:
-    app: reviews
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v2
-  labels:
-    app.kubernetes.io/instance: reviews
+  labels: &podLabels
+    app.kubernetes.io/instance: bookinfo
     app.kubernetes.io/name: reviews
     app: reviews
     version: v2
 spec:
   replicas: 1
   selector:
-    matchLabels:
-      app.kubernetes.io/instance: reviews
-      app.kubernetes.io/name: reviews
-      app: reviews
-      version: v2
+    matchLabels: *podLabels
   template:
     metadata:
-      labels:
-        app.kubernetes.io/instance: reviews
-        app.kubernetes.io/name: reviews
-        app: reviews
-        version: v2
+      labels: *podLabels
     spec:
-      serviceAccountName: bookinfo-reviews
+      serviceAccountName: reviews
       containers:
       - name: reviews
         image: docker.io/istio/examples-bookinfo-reviews-v2:1.15.0
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 9080
+        - name: http
+          containerPort: 9080
